上传“记忆法视频”段的翻译

--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -555,103 +555,109 @@ We’ve examined the mnemonic medium in some depth. The intent was to show you t
 
 ## 记忆法视频
 
-In 2014, the digital artist Eric Wernquist released an extraordinary short video entitled “[Wanderers](https://vimeo.com/108650530)”. The video provides a first-person glimpse of what it would be like to explore the Solar System:
+ In 2014, the digital artist Eric Wernquist released an extraordinary short video entitled “[Wanderers](https://vimeo.com/108650530)”. The video provides a first-person glimpse of what it would be like to explore the Solar System:
 
-2014年，数字艺术家Eric Wernquist发布了一个非凡的短视频，题为"[流浪者](https://vimeo.com/108650530)"。该视频以第一人称的方式介绍了探索太阳系的情况：
+2014年，数字艺术家Eric Wernquist发布了一条令人惊奇的短小视频，题为"[流浪者](https://vimeo.com/108650530)"。该视频以第一人称视角带领观众领略探索太阳系是什么感受。
 
 <iframe src="https://player.vimeo.com/video/108650530?color=ffffff&amp;title=0&amp;byline=0&amp;portrait=0&amp;badge=0" frameborder="0" allow="autoplay;
 			fullscreen" allowfullscreen="" style="margin: 0px; padding: 0px; border: 0px; outline: 0px; background: transparent; box-sizing: border-box; width: 748px; height: calc(var(--width) / var(--aspect-ratio)); --aspect-ratio: 2.353;"></iframe>
 
 
-We hear the narrator’s (Carl Sagan) wonder and awe, and cannot help but empathize with his deep belief in the value of exploration. We get a sense of how many mysteries and how much beauty there is in our own cosmic neighborhood. The music begins with a wistful nostalgia for those of our ancestors who dared to explore, and then changes to convey excitement and danger and the boldness of those members of our and future generations who continue that exploration.
+ We hear the narrator’s (Carl Sagan) wonder and awe, and cannot help but empathize with his deep belief in the value of exploration. We get a sense of how many mysteries and how much beauty there is in our own cosmic neighborhood. The music begins with a wistful nostalgia for those of our ancestors who dared to explore, and then changes to convey excitement and danger and the boldness of those members of our and future generations who continue that exploration.
 
-我们听到叙述者(卡尔-萨根)的惊奇和敬畏，不禁对他对探索的价值的深刻信念产生共鸣。我们感受到在我们自己的宇宙邻居中有多少神秘和多少美丽。音乐以对我们那些敢于探索的祖先的怀念开始，然后改变，传达出兴奋和危险，以及我们和后代继续探索的成员的勇气。
+在旁白（Carl Sagan 出演）频频称奇，屡屡惊叹时，作者对探索价值的执着渐渐让观众感同身受。观众开始感受到，这颗星球的周围，有重重谜团林立，有壮丽美景锦簇。视频的音乐则带以略显伤感的怀旧风格开头，似乎在纪念勇于探索的人类先祖，随后变调，描绘我们和未来的人，继续未竟的探索，大胆向前，挑战危机，拥抱激情。
 
-It’s interesting to contrast the video to the video’s script, a short text by Carl Sagan. The [text](http://mentalfloss.com/article/60335/wanderers-glimpse-humanitys-possible-future) is beautiful, but reading it is a much more remote and cerebral experience, conveying a much less visceral emotional understanding.
 
-将这段视频与视频的脚本进行对比是很有意思的，这是卡尔-萨根的一篇短文。[文字](http://mentalfloss.com/article/60335/wanderers-glimpse-humanitys-possible-future)很美，但阅读它是一种更加遥远和脑力的体验，传达的是一种更不直观的情感理解。
 
-We have a friend, Grant Sanderson, who makes astonishing mathematics videos on his YouTube channel, [3Blue1Brown](https://www.youtube.com/channel/UCYO_jab_esuFRV4b17AJtAw). Below is one of our favorites, a video sketching a proof of a relatively recent research result in geometry, using ideas from algebraic topology. This sounds fearsome, but the video is beautiful and accessible, and has been viewed more than 1.2 million times.
+ It’s interesting to contrast the video to the video’s script, a short text by Carl Sagan. The [text](http://mentalfloss.com/article/60335/wanderers-glimpse-humanitys-possible-future) is beautiful, but reading it is a much more remote and cerebral experience, conveying a much less visceral emotional understanding.
 
-我们有一个朋友，格兰特-桑德森，他在他的YouTube频道[3Blue1Brown](https://www.youtube.com/channel/UCYO_jab_esuFRV4b17AJtAw)上制作了令人惊讶的数学视频。下面是我们最喜欢的一个视频，它用代数拓扑学的思想勾勒出几何学中一个相对较新的研究结果的证明。这听起来很可怕，但这段视频很美，也很容易理解，而且已经被观看了120多万次。
+对比这条视频以及由 Carl Sagan 撰写的脚本，很有意思。文字很美，但读这段文字有一种缥缈之感，更像一场脑力游戏，传达的情绪不是很直观。
+
+ We have a friend, Grant Sanderson, who makes astonishing mathematics videos on his YouTube channel, [3Blue1Brown](https://www.youtube.com/channel/UCYO_jab_esuFRV4b17AJtAw). Below is one of our favorites, a video sketching a proof of a relatively recent research result in geometry, using ideas from algebraic topology. This sounds fearsome, but the video is beautiful and accessible, and has been viewed more than 1.2 million times.
+
+我们有一个朋友，格兰特-桑德森，他在他的YouTube频道[3Blue1Brown](https://www.youtube.com/channel/UCYO_jab_esuFRV4b17AJtAw)上制作很多令人惊讶的数学视频。下面是我们最喜欢的一个视频，其中他利用代数拓扑学的思想，简单证明了几何学中一个较新的研究结果。听起来令人生畏，但这段视频不仅优美，而且容易理解，已经被观看了120多万次。
 
 <iframe src="https://www.youtube.com/embed/AmgkSdhK4K8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="margin: 0px; padding: 0px; border: 0px; outline: 0px; background: transparent; box-sizing: border-box; width: 748px; height: calc(var(--width) / var(--aspect-ratio)); --aspect-ratio: 1.775;"></iframe>
 
-As with *Wanderers*, watching this video is a remarkable emotional experience. It’s obvious the person narrating the video loves mathematics, and you cannot help but empathize. As you watch, you experience repeated “Ahah!” moments, moments of surprising insight, as connections that were formerly invisible become obvious. It shows mathematics as something beautiful, containing extraordinary ideas and intriguing mysteries, while at the same time showing that doing mathematics is not mysterious, that it is something anyone can understand and even do.
+ As with *Wanderers*, watching this video is a remarkable emotional experience. It’s obvious the person narrating the video loves mathematics, and you cannot help but empathize. As you watch, you experience repeated “Ahah!” moments, moments of surprising insight, as connections that were formerly invisible become obvious. It shows mathematics as something beautiful, containing extraordinary ideas and intriguing mysteries, while at the same time showing that doing mathematics is not mysterious, that it is something anyone can understand and even do.
 
-与《流浪者》一样，观看这段视频是一种非凡的情感体验。很明显，讲述视频的人热爱数学，而你不禁感同身受。当你观看时，你经历了反复的 "啊哈！"时刻，令人惊讶的洞察力时刻，因为以前看不见的联系变得明显。它显示了数学是一种美丽的东西，包含了非凡的想法和耐人寻味的奥秘，同时也显示了做数学并不神秘，它是任何人都可以理解甚至做的事情。
+观看这条视频，和观看上文的《流浪者》一样都是触及人心的情感体验。很显然，视频中主讲者热爱数学，而观众无法不能感同身受。观看时，观众往往反复感叹“啊哈！”，因为隐藏的联系被挖掘出来，他们收获了令人惊喜的洞见。视频中，数学的优美，数学蕴藏的非凡想法，数学潜藏的有趣谜团尽数展现，同时观众又感到做数学并不神秘，所有人都能理解数学，甚至参与其中。
 
-It’s tempting to overlook or undervalue this kind of emotional connection to a subject. But it’s the foundation of all effective learning and of all effective action. And it is much easier to create such an emotional connection using video than using text.
+ It’s tempting to overlook or undervalue this kind of emotional connection to a subject. But it’s the foundation of all effective learning and of all effective action. And it is much easier to create such an emotional connection using video than using text.
 
-我们很容易忽视或低估这种与一个主题的情感联系。但它是所有有效学习和所有有效行动的基础。而且，使用视频比使用文字更容易建立这种情感联系。
+这种对知识主题的情感连接很容易被忽视或是被低估，然而它对于所有有效的学习和有效行动@f 都是基础。要建立这种情感连接，视频比文字更容易。
 
-There’s a flipside to this emotional connection, however. We’ve often heard people describe Sanderson’s videos as about “teaching mathematics”. But in conversation he’s told us he doesn’t think more than a small fraction of viewers are taking away much detailed understanding of mathematics. We suspect this is generally true, that high affect videos usually do little to change people’s detailed intellectual understanding. Rather, the extraordinary value of the videos lies in the emotional connection they create.
+ There’s a flipside to this emotional connection, however. We’ve often heard people describe Sanderson’s videos as about “teaching mathematics”. But in conversation he’s told us he doesn’t think more than a small fraction of viewers are taking away much detailed understanding of mathematics. We suspect this is generally true, that high affect videos usually do little to change people’s detailed intellectual understanding. Rather, the extraordinary value of the videos lies in the emotional connection they create.
 
-Is it possible to create a medium which blends the best qualities of both video and text?
 
-In particular, is it possible to create a medium which has the emotional range possible in video – a range which can be used to convey awe and mystery and surprise and beauty? But which can also firmly ground that emotional connection in detailed understanding, the mastery of details which is the raison d’être of both conventional text and, perhaps even moreso, of the mnemonic medium?
 
-We believe this may be possible, and we plan to develop a *mnemonic video* form that provides both the emotional connection possible in video, and the mastery of details possible in the mnemonic medium.
+ Is it possible to create a medium which blends the best qualities of both video and text?
 
-Creating such a form is challenging. Many MOOC platforms have attempted something a little in this vein. The typical approach is to have a low-affect talking head video, with the videos interrupted occasionally for brief quizzesThese images excerpted from [Astronomy: Exploring Time and Space](https://www.coursera.org/learn/astro).. Here’s how it works on one MOOC platform, Coursera:
+ In particular, is it possible to create a medium which has the emotional range possible in video – a range which can be used to convey awe and mystery and surprise and beauty? But which can also firmly ground that emotional connection in detailed understanding, the mastery of details which is the raison d’être of both conventional text and, perhaps even moreso, of the mnemonic medium?
 
-然而，这种情感联系也有其反面。我们经常听到有人把桑德森的视频描述为 "教数学"。但在谈话中，他告诉我们，他不认为有超过一小部分的观众会对数学产生详细的理解。我们怀疑这通常是真的，高影响的视频通常不会改变人们详细的智力理解。相反，这些视频的非凡价值在于它们创造的情感联系。
+ We believe this may be possible, and we plan to develop a *mnemonic video* form that provides both the emotional connection possible in video, and the mastery of details possible in the mnemonic medium.
 
-有没有可能创造一种媒介，将视频和文本的最佳品质融合在一起？
+ Creating such a form is challenging. Many MOOC platforms have attempted something a little in this vein. The typical approach is to have a low-affect talking head video, with the videos interrupted occasionally for brief quizzesThese images excerpted from [Astronomy: Exploring Time and Space](https://www.coursera.org/learn/astro).. Here’s how it works on one MOOC platform, Coursera:
 
-特别是，是否有可能创造一种媒介，它具有视频中可能的情感范围--一种可以用来传达敬畏、神秘、惊讶和美丽的范围？但它也能将这种情感联系牢牢地建立在详细的理解上，即对细节的掌握，这是传统文本的存在理由，也许更多的是记忆性媒介的存在理由？
+然而，这种情感连接也有其反面。我们经常听到有人把认为桑德森的视频在 "教数学"。但在一次与他的谈话中，他告诉我们，他认为只有一小部分的人看完视频后能获得不算粗略的数学知识。恐怕这基本是正确的，高影响力的视频通常无法影响人们细致的智力思维。但是，这些视频的非凡价值在于它们创造的情感连接。
 
-我们相信这是可能的，我们计划开发一种*记忆性的视频*形式，既提供视频中可能的情感联系，又提供记忆性媒介中可能的对细节的掌握。
+有没有可能创造一种媒介，集视频和文本的优良特点于一身？
 
-创造这样一种形式是具有挑战性的。许多MOOC平台已经在这方面做了一些尝试。典型的方法是有一个低效果的谈话式视频，视频偶尔被打断，进行简短的测验。这些图片摘自[天文学：探索时间和空间](https://www.coursera.org/learn/astro)。以下是一个MOOC平台Coursera的运作方式:
+具体地说，是否有可能创造如下如一种媒介？它像视频一样，富有情感潜力——可以表达敬畏，奥妙，惊喜，美感的潜力，而它创造的情感联系有细致的知识作为基础。这些知识包含丰富细节，讲述他们也是普通文本，甚至是记忆媒介的目的。
+
+我们相信这是可能的，我们计划开发一种“记忆视频，既提供视频中的情感连接，又提供记忆性媒介中的丰富细节。
+
+创造这样媒介很有挑战性。许多慕课平台已经做了一些尝试。典型的方法是在真人出镜讲解的无聊视频中穿插少量测试题。这些图片摘自[天文学：探索时间和空间](https://www.coursera.org/learn/astro)，描述了慕课平台 Coursera 如何使用这种方法。
 
 ![Figure depicting images of a 'talking head' lecture, alternating with dry, text-based multiple choice questions](https://numinous.productions/ttft/assets/mnemonic_video_edx_sequence-2x.png)
 
-Other MOOCs differ in the details. But the overall emotional experience may be summed up as:
+ Other MOOCs differ in the details. But the overall emotional experience may be summed up as:
 
-其他MOOCs在细节上有所不同。但整体的情感体验可以总结为：
+其他MOOCs在细节上有所不同。但其整体的情感体验可以总结为：
 
 ![Graph highlighting the sharp affective transitions between the lectures and the very low affect questions](https://numinous.productions/ttft/assets/mnemonic_video_edx_graph-2x.png)
 
-The very best parts of the video may be emotionally compelling, though it’s rare that they achieve the emotional range and connection of the best videos from people like Grant Sanderson. And the overall emotional experience is disjointed, almost repellent. Is it possible to create an integrated medium, with a unified and carefully crafted emotional and intellectual experience? Ideally, is it possible to create something like the following?
 
-视频中最好的部分可能在情感上引人注目，尽管它们很少能达到格兰特-桑德森等人的最佳视频的情感范围和联系。而整体的情感体验是不连贯的，几乎是排斥的。是否有可能创造一个综合的媒介，有一个统一的、精心制作的情感和智力体验？理想情况下，是否有可能创造出像以下这样的东西？
+
+ The very best parts of the video may be emotionally compelling, though it’s rare that they achieve the emotional range and connection of the best videos from people like Grant Sanderson. And the overall emotional experience is disjointed, almost repellent. Is it possible to create an integrated medium, with a unified and carefully crafted emotional and intellectual experience? Ideally, is it possible to create something like the following?
+
+这些视频中，可能有一些质量高的部分情感上引人入胜，虽说他们也很难像最优秀的视频那样充分发挥情感潜力，构建情感连接，比如格兰特-桑德森等人的视频。但整体情感体验毫不连贯，令人敬而远之。那么，有没有可能创造一种融合情感与知识的媒介，提供统一而精心打造的情感与智力体验？最理想化的话，是否能创造如下的体验？
 
 ![Hypothetical graph depicting smoother affective transitions and higher overall affect](https://numinous.productions/ttft/assets/mnemonic_video_hypothetical_graph-2x.png)
 
-In MOOCs, questions are typically presented in a very dry form, detached from context. In the mnemonic video the narrator would explain why the questions are important, and why the user will benefit from participating, as a seamless part of the overall narration. Done right – perhaps with appropriate music, and a sense of urgency or play in the narration – it would create a real sense of the stakes. At the same time, the video player can be modified so the user can respond directly to questions, as part of the spaced-repetition experience. The result would be much softer transitions between the high-affect core narration and the moderate-affect questions.
+ In MOOCs, questions are typically presented in a very dry form, detached from context. In the mnemonic video the narrator would explain why the questions are important, and why the user will benefit from participating, as a seamless part of the overall narration. Done right – perhaps with appropriate music, and a sense of urgency or play in the narration – it would create a real sense of the stakes. At the same time, the video player can be modified so the user can respond directly to questions, as part of the spaced-repetition experience. The result would be much softer transitions between the high-affect core narration and the moderate-affect questions.
 
-在MOOCs中，问题通常是以一种非常枯燥的形式呈现的，脱离了背景。在记忆性视频中，叙述者将解释为什么这些问题是重要的，为什么用户会从参与中受益，作为整个叙述的一个无缝部分。做得好的话--也许加上适当的音乐，以及叙述中的紧迫感或游戏--它将创造一种真正的利害关系感。同时，视频播放器可以被修改，以便用户可以直接回答问题，作为间隔重复体验的一部分。这样做的结果是，在高效果的核心叙述和中等效果的问题之间的过渡会柔和得多。
+@d 在慕课平台中，问题通常脱离了上下文，显得很枯燥。但是在记忆视频中，叙述者会解释所研究的问题为何重要，为什么用户看完视频会受益，这些内容都融入在整体叙述中。做得好的话--比如配有合适的音乐，语调适当地急促或调皮--它将让观者感到迫切相关。同时可以调整视频播放器，以便用户直接回答问题@d ，作为间隔重复体验的一部分@d。如此改造便能让在情感充沛的主要叙述和情感中性的问题之间的过渡会柔和得多。
 
-Here’s a short sketch of one approach to doing thisThe narrator’s script in this sketch is adapted from *Cosmos* (1984), episode 4., showing how the narrator could ask questions aloud as an integrated part of the overall narration:
+ Here’s a short sketch of one approach to doing this. The narrator’s script in this sketch is adapted from *Cosmos* (1984), episode 4., showing how the narrator could ask questions aloud as an integrated part of the overall narration:
 
-这里有一个简短的草图，介绍了这样做的一种方法。这个草图中的叙述者的脚本改编自*宇宙*(1984)，第4集：
+下面我们简述一种实现上述效果的方法。下面视频中叙述者的脚本改编自*宇宙*(1984)，第4集。视频展现了叙述者如何在整体叙述中适时提问而不显唐突：
 
-![Image](https://pic4.zhimg.com/80/v2-3a7edacd0a5d0c02b1e8b8e520d907af.png)
+![image-20210517203113497](/Users/jarrettye/Documents/Writing/supermemo.guru-cn/Essays/我们如何才能开发出变革性的思想工具？.assets/image-20210517203113497.png)
 
-![Image](https://pic4.zhimg.com/80/v2-7a1884be7223c7a002ea2b0c0a93168d.png)
+![image-20210517203135790](/Users/jarrettye/Documents/Writing/supermemo.guru-cn/Essays/我们如何才能开发出变革性的思想工具？.assets/image-20210517203135790.png)
 
-![Image](https://pic4.zhimg.com/80/v2-371288d0a1824ce0e4cedd96c5e23497.png)
+![image-20210517203310414](/Users/jarrettye/Documents/Writing/supermemo.guru-cn/Essays/我们如何才能开发出变革性的思想工具？.assets/image-20210517203310414.png)
 
-It seems likely that the rhythm of mnemonic videos would be quite different to mnemonic essays. In particularly, the frequency and density of questions would be lower than in the mnemonic medium, and it would be necessary to test different beats and cadences to ensure a good balance of emotional and intellectual experience. Even high-affect video typically has quieter moments; it achieves the high affect in part by contrast to the lower-intensity moments. Think about the way a good action movie or thriller needs lulls; if it’s too high-intensity all the time, eventually our emotional response is dulled. We could design mnemonic video so the questions help fill this lower-intensity emotional beat.
+ It seems likely that the rhythm of mnemonic videos would be quite different to mnemonic essays. In particularly, the frequency and density of questions would be lower than in the mnemonic medium, and it would be necessary to test different beats and cadences to ensure a good balance of emotional and intellectual experience. Even high-affect video typically has quieter moments; it achieves the high affect in part by contrast to the lower-intensity moments. Think about the way a good action movie or thriller needs lulls; if it’s too high-intensity all the time, eventually our emotional response is dulled. We could design mnemonic video so the questions help fill this lower-intensity emotional beat.
+
+ 记忆视频的节奏很可能与记忆性文章大不相同，尤其是问题的频率和密度会比记忆媒介低。与此同时，有必要测试不同的节拍和节奏，以平衡情感和智力体验。情感充沛的视频通常也有比较平静的时刻；他们之所以能有效激发情感，一部分是因为有这些低情感强度的时刻作对比。想一想，一部好的动作电影或惊悚片也有些平淡片段。内容一直都是高情感强度的话，观众的情感反馈也会减弱。设计记忆视频时，可以让其中的问题充当低情感强度的节拍。@d
 
 Of course, this is merely a quick sketch of one approach to the design of mnemonic video. Ideally, there would also be a spaced-repetition component, perhaps with the questions asked in text instead of video. This sort of sketch seems to us a promising direction, but needs considerable development and intense testing. In particular, we need to do detailed, second-by-second user experience testing, to understand and shape users’ emotional and intellectual experience. That would continue until we were confident that our target users were having the desired experience. Ideally, we’d also generate several more very different designs, and try to understand how each approach would impact the user’s emotional and intellectual experience.
 
+ 当然，上面只是简略描述了一种设计记忆视频的方法。理想情况下，还应该有一个间隔重复的部分，也许用文字而不是视频来提问。在我们看来，这种方法大有可为，但需要大量开发工作并充分测试。特别地，我们要做详细的、逐秒的用户体验测试，以了解用户的情感和智力体验，并进行修正，直到我们有自信认为目标用户得到了他们需要的体验。理想情况下，我们也会给出几个非常不同的设计，并努力了解每种方法会如何影响用户的情感和智力体验。
+
 The broader point here is about taking emotion seriously. Historically, a lot of work on tools for thought has either ignored emotion, or treated it as no more than a secondary concern. Instead, that work has focused on new skills acquired, on what the user “learns”. They’ve been designing for Spock, when emotional connection is a high-order bit. Do users feel disinterested? Afraid? Hostile? Anxious? Or do they internalize a sense of excitement, of beauty, perhaps even an expansion in their own goals, an expansion of their self?
+
+ 此处讨论的上位主题是软件是否认真对待用户情感。历史上，很多思维工具软件@d 要么忽略了情感，要么把它当作次要问题。相反，这些工作都专心于让用户习得新技能，让用户 "学到 "什么。他们似乎是为一个没有情感的木头人设计，全然不顾满足情感联系这一更高阶的需求。用户们是不是没兴趣？害怕？充满敌意？焦虑？还是他们从内而外地感到激动，感到美学享受，甚至感到目标被延伸，自我得到发展？
 
 By contrast, media forms such as movies and music and (often) video games do take emotion seriously. The designers of such forms often have incredibly elaborate models of user’s emotional responses. These models range from detailed, second-by-second understanding, to deep thinking about a user’s overall emotional journey. We believe it’s possible and desirable to use such approaches in the development of tools for thought.
 
+ 相比之下，电影、音乐和(通常)电子游戏等媒介是认真对待情感的。这类媒介的设计者@d往往对用户的情绪反馈进行了十分精巧的建模，小到对用户情感逐秒变化的丰富理解，大到对用户整体情感历程的深入考虑。在思维工具的开发中使用这种方法是可行的，也是可取的。
+
 At the same time, a positive emotional experience alone is not enough. For tools for thought to attain enduring power, the user must experience a real growth in mastery, an expansion in their ability to act. And so we’d like to take both the emotional and intellectual experience of tools for thought seriously. Mnemonic video is a good venue for such exploration. To paraphrase Einstein, attaining a detailed understanding without forming an emotional connection is lame; while forming an emotional connection without detailed understanding has no enduring power.
 
-记忆性视频的节奏很可能与记忆性文章大不相同。特别是，问题的频率和密度会比记忆媒介低，而且有必要测试不同的节拍和节奏，以确保情感和智力体验的良好平衡。即使是高效果的视频通常也有比较安静的时刻；它实现高效果的部分原因是与低强度的时刻形成对比。想想一部好的动作片或惊悚片需要休息的方式；如果它一直都是高强度的，最终我们的情感反应会变得迟钝。我们可以设计记忆性视频，使问题有助于填补这种低强度的情感节拍。
-
-当然，这仅仅是设计记忆性视频的一种方法的快速草图。理想情况下，还应该有一个间隔重复的部分，也许用文字而不是视频来提问。在我们看来，这种草图是一个有希望的方向，但需要大量的开发和密集的测试。特别是，我们需要做详细的、逐秒的用户体验测试，以了解和塑造用户的情感和智力体验。这将持续到我们确信我们的目标用户获得了所需的体验。理想情况下，我们也会产生几个非常不同的设计，并尝试了解每种方法会如何影响用户的情感和智力体验。
-
-这里更广泛的观点是要认真对待情感。从历史上看，很多关于思想工具的工作要么忽略了情感，要么把它当作次要的问题。相反，这些工作都集中在获得的新技能上，集中在用户 "学到 "的东西上。他们一直在为斯波克设计，而情感连接是一个高阶的位子。用户是否感到不感兴趣？害怕吗？敌意？焦虑？还是他们内化了一种兴奋感、美感，甚至可能是他们自己目标的扩展，自我的扩展？
-
-相比之下，媒体形式，如电影、音乐和(通常)电子游戏，确实认真对待情感。这类形式的设计者往往对用户的情绪反应有难以置信的精心设计的模型。这些模型的范围从详细的、逐秒的理解，到对用户的整体情感旅程的深入思考。我们相信，在思想工具的开发中使用这种方法是可能的，也是可取的。
-
-同时，仅有积极的情感体验是不够的。为了使思想工具获得持久的力量，用户必须体验到真正的掌握能力的增长，扩大他们的行动能力。因此，我们要认真对待思想工具的情感和智力体验。记忆学视频是这种探索的一个好场所。用爱因斯坦的话说，获得详细的理解而不形成情感联系是很蹩脚的；而形成情感联系而不形成详细的理解则没有持久的力量。
+ 于此同时，仅有积极的情感体验是不够的。为了让思维工具激发持久力量，在使用工具后，用户需要切实掌握更多知识，提升决策与行动能力@d。因此，思维工具的情感和智力体验必须同样认真对待。为了探究这两者的处理方式，记忆视频便能派上用场。用爱因斯坦的话说，没有丰富知识，空有情感连接；没有情感连接，空有丰富知识，
 
 ## Why isn’t there more work on tools for thought today?
 
