图片换成知乎图床

--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -633,11 +633,11 @@ We’ve examined the mnemonic medium in some depth. The intent was to show you t
 
 下面我们简述一种实现上述效果的方法。下面视频中叙述者的脚本改编自*宇宙*(1984)，第4集。视频展现了叙述者如何在整体叙述中适时提问而不显唐突：
 
-![image-20210517203113497](/Users/jarrettye/Documents/Writing/supermemo.guru-cn/Essays/我们如何才能开发出变革性的思想工具？.assets/image-20210517203113497.png)
+![Image](https://pic4.zhimg.com/80/v2-3a7edacd0a5d0c02b1e8b8e520d907af.png)
 
-![image-20210517203135790](/Users/jarrettye/Documents/Writing/supermemo.guru-cn/Essays/我们如何才能开发出变革性的思想工具？.assets/image-20210517203135790.png)
+![Image](https://pic4.zhimg.com/80/v2-7a1884be7223c7a002ea2b0c0a93168d.png)
 
-![image-20210517203310414](/Users/jarrettye/Documents/Writing/supermemo.guru-cn/Essays/我们如何才能开发出变革性的思想工具？.assets/image-20210517203310414.png)
+![Image](https://pic4.zhimg.com/80/v2-371288d0a1824ce0e4cedd96c5e23497.png)
 
  It seems likely that the rhythm of mnemonic videos would be quite different to mnemonic essays. In particularly, the frequency and density of questions would be lower than in the mnemonic medium, and it would be necessary to test different beats and cadences to ensure a good balance of emotional and intellectual experience. Even high-affect video typically has quieter moments; it achieves the high affect in part by contrast to the lower-intensity moments. Think about the way a good action movie or thriller needs lulls; if it’s too high-intensity all the time, eventually our emotional response is dulled. We could design mnemonic video so the questions help fill this lower-intensity emotional beat.
 
